--- a/index.html
+++ b/index.html
@@ -1,149 +1,131 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>風向タイムライン</title>
+  <title>風向・風速モニター</title>
   <style>
     body {
       font-family: sans-serif;
       padding: 20px;
       text-align: center;
     }
-    .section-title {
-      margin-top: 30px;
-      font-weight: bold;
+    .section {
+      margin-bottom: 40px;
     }
-    .timeline {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-    .entry {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 50px;
-      font-size: 10px;
-    }
-    .arrow {
-      width: 30px;
-      height: 60px;
-      transform-origin: center center;
-      transition: transform 0.3s ease;
-    }
-    .highlight polygon {
-      fill: red;
+    svg {
+      overflow: visible;
     }
     .icon {
-      width: 30px;
-      height: 30px;
-      margin-top: 2px;
+      width: 50px;
+      height: 50px;
     }
-    .timestamp {
-      margin: 3px 0;
+    .highlight {
+      stroke: red;
+      stroke-width: 3;
     }
   </style>
 </head>
 <body>
-  <h2 id="date-title">風向タイムライン</h2>
-  <div id="am-title" class="section-title">午前</div>
-  <div class="timeline" id="am-timeline"></div>
-  <div id="pm-title" class="section-title">午後</div>
-  <div class="timeline" id="pm-timeline"></div>
-  <div style="margin-top: 20px">
-    <a id="prev-link" href="#">← 前日</a>　|
-    <a id="next-link" href="#">翌日 →</a>
-  </div>
+  <h1>風向・風速モニター（今日）</h1>
+  <div id="display"></div>
 
   <script>
-    const apiBase = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← 置き換えてください
-    const urlParams = new URLSearchParams(window.location.search);
-    const dateParam = urlParams.get('date');
-    const targetDate = dateParam ? new Date(dateParam) : new Date();
-    const yyyy = targetDate.getFullYear();
-    const mm = String(targetDate.getMonth() + 1).padStart(2, '0');
-    const dd = String(targetDate.getDate()).padStart(2, '0');
-    const dateStr = `${yyyy}-${mm}-${dd}`;
-
-    document.getElementById('date-title').textContent = `風向タイムライン（${yyyy}年${mm}月${dd}日）`;
-    document.getElementById('prev-link').href = `?date=${yyyy}-${mm}-${String(Number(dd) - 1).padStart(2, '0')}`;
-    document.getElementById('next-link').href = `?date=${yyyy}-${mm}-${String(Number(dd) + 1).padStart(2, '0')}`;
+    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec';
 
     function highlightDir(deg) {
-      return deg >= 22.5 && deg <= 67.5; // 北北東〜東北東
+      return (deg >= 22.5 && deg < 67.5); // NNE～ENE
     }
 
-    function createArrow(deg, speed, highlight) {
-      const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-      svg.setAttribute("viewBox", "0 0 10 50");
-      svg.classList.add('arrow');
-      if (highlight) svg.classList.add('highlight');
-      svg.style.transform = `rotate(${(deg + 180) % 360}deg)`;
+    function render(data) {
+      const display = document.getElementById('display');
+      display.innerHTML = '';
 
-      const line = document.createElementNS("http://www.w3.org/2000/svg", "line");
-      line.setAttribute("x1", "5");
-      line.setAttribute("y1", "0");
-      line.setAttribute("x2", "5");
-      line.setAttribute("y2", "35");
-      line.setAttribute("stroke", "gray");
-      line.setAttribute("stroke-width", Math.max(1.5, Math.min(speed * 0.8, 4)));
-      svg.appendChild(line);
+      const svgNS = "http://www.w3.org/2000/svg";
+      const rows = [[], [], [], []]; // 午前1,2段、午後1,2段
+      const now = new Date();
+      data.forEach(entry => {
+        const t = new Date(entry.timestamp);
+        const hour = t.getHours();
+        const minute = t.getMinutes();
+        const timeStr = `${String(hour).padStart(2, '0')}:${String(minute).padStart(2, '0')}`;
+        const deg = entry.windDeg ?? 0;
+        const speed = entry.windSpeed ?? 0;
+        const iconCode = entry.iconCode ?? '';
+        const description = entry.description ?? '';
+        const humidity = entry.humidity ?? '–';
 
-      const head = document.createElementNS("http://www.w3.org/2000/svg", "polygon");
-      head.setAttribute("points", "0,35 10,35 5,50");
-      head.setAttribute("fill", "gray");
-      svg.appendChild(head);
+        const svg = document.createElementNS(svgNS, "svg");
+        svg.setAttribute("width", "60");
+        svg.setAttribute("height", "100");
 
-      return svg;
+        const g = document.createElementNS(svgNS, "g");
+        g.setAttribute("transform", `translate(30,40) rotate(${(deg + 180) % 360})`);
+
+        const shaft = document.createElementNS(svgNS, "line");
+        shaft.setAttribute("x1", 0);
+        shaft.setAttribute("y1", 0);
+        shaft.setAttribute("x2", 0);
+        shaft.setAttribute("y2", -Math.min(Math.max(speed * 4, 10), 30));
+        shaft.setAttribute("stroke", "gray");
+        shaft.setAttribute("stroke-width", "4");
+        g.appendChild(shaft);
+
+        const arrowHead = document.createElementNS(svgNS, "polygon");
+        arrowHead.setAttribute("points", "-6,-40 6,-40 0,-30");
+        arrowHead.setAttribute("fill", "gray");
+        if (highlightDir(deg)) {
+          arrowHead.setAttribute("fill", "red");
+        }
+        g.appendChild(arrowHead);
+        svg.appendChild(g);
+
+        const timeText = document.createElementNS(svgNS, "text");
+        timeText.textContent = timeStr;
+        timeText.setAttribute("x", 30);
+        timeText.setAttribute("y", 90);
+        timeText.setAttribute("text-anchor", "middle");
+        timeText.setAttribute("font-size", "10");
+        svg.appendChild(timeText);
+
+        const icon = document.createElement("img");
+        icon.className = "icon";
+        icon.src = `https://openweathermap.org/img/wn/${iconCode}.png`;
+        icon.alt = description;
+
+        const container = document.createElement("div");
+        container.className = "section";
+        container.appendChild(svg);
+        container.appendChild(icon);
+
+        const rowIndex = (hour < 12)
+          ? (hour < 6 ? 0 : 1)
+          : (hour < 18 ? 2 : 3);
+        rows[rowIndex].push(container);
+      });
+
+      const labels = ['午前（前半）', '午前（後半）', '午後（前半）', '午後（後半）'];
+      rows.forEach((row, idx) => {
+        if (row.length === 0) return;
+        const section = document.createElement("div");
+        section.className = "section";
+        const label = document.createElement("h3");
+        label.textContent = labels[idx];
+        section.appendChild(label);
+        const wrapper = document.createElement("div");
+        wrapper.style.display = "flex";
+        wrapper.style.flexWrap = "wrap";
+        wrapper.style.justifyContent = "center";
+        row.forEach(el => wrapper.appendChild(el));
+        section.appendChild(wrapper);
+        display.appendChild(section);
+      });
     }
 
-    fetch(`${apiBase}?date=${dateStr}`)
+    fetch(apiUrl)
       .then(res => res.json())
-      .then(data => {
-        const am = document.getElementById('am-timeline');
-        const pm = document.getElementById('pm-timeline');
-
-        data.forEach(entry => {
-          const t = new Date(entry.timestamp);
-          if (t.toISOString().slice(0, 10) !== dateStr) return;
-
-          const hour = t.getHours();
-          const minute = t.getMinutes();
-          const timeStr = `${String(hour).padStart(2, '0')}:${String(minute).padStart(2, '0')}`;
-
-          const deg = entry.windDeg ?? 0;
-          const speed = entry.windSpeed ?? 0;
-          const iconCode = entry.iconCode ?? '';
-          const description = entry.description ?? '';
-
-          const div = document.createElement('div');
-          div.className = 'entry';
-
-          const arrow = createArrow(deg, speed, highlightDir(deg));
-          const time = document.createElement('div');
-          time.className = 'timestamp';
-          time.textContent = timeStr;
-
-          const icon = document.createElement('img');
-          icon.className = 'icon';
-          icon.src = `https://openweathermap.org/img/wn/${iconCode}.png`;
-          icon.alt = description;
-
-          div.appendChild(arrow);
-          div.appendChild(time);
-          div.appendChild(icon);
-
-          if (hour < 12) {
-            am.appendChild(div);
-          } else {
-            pm.appendChild(div);
-          }
-        });
-      })
+      .then(render)
       .catch(err => {
-        document.getElementById('date-title').textContent = 'データ取得エラー: ' + err;
+        document.getElementById('display').textContent = "データ取得エラー：" + err;
       });
   </script>
 </body>
