--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
 
   <script>
-    const apiBase = 'https://script.google.com/macros/s/（ここにあなたのexec URL）/exec';
+    const apiBase = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec';
     const urlParams = new URLSearchParams(window.location.search);
     const dateParam = urlParams.get("date");
 
