--- a/index.html
+++ b/index.html
@@ -1,177 +1,193 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>風向・風速ビューア</title>
+  <meta charset="UTF-8" />
+  <title>風向タイムライン</title>
   <style>
     body {
       font-family: sans-serif;
       text-align: center;
+      padding: 20px;
     }
-    .date-title {
-      font-size: 1.5em;
-      margin: 1em 0;
+
+    .nav {
+      margin-bottom: 10px;
     }
-    .nav-links {
-      margin-bottom: 1em;
+
+    .timeline-section {
+      margin: 20px auto;
+      width: fit-content;
     }
-    .section-title {
+
+    .timeline-title {
       font-weight: bold;
       margin-top: 1em;
     }
-    .grid {
+
+    .timeline {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
-      gap: 4px;
-      margin: 0.5em;
+      gap: 8px;
     }
+
     .entry {
       display: flex;
       flex-direction: column;
       align-items: center;
-      font-size: 0.8em;
+      font-size: 10px;
+      width: 40px;
     }
+
     .icon {
-      width: 32px;
-      height: 32px;
+      width: 30px;
+      height: 30px;
     }
-    svg {
-      display: block;
+
+    .highlight {
+      filter: drop-shadow(0 0 5px orange);
     }
   </style>
 </head>
 <body>
-  <div class="nav-links">
-    <a id="prevDay" href="#">前日</a> ｜ <a id="nextDay" href="#">翌日</a>
+  <div class="nav">
+    <a href="#" id="prevLink">← 前日</a> |
+    <span id="dateTitle"></span> |
+    <a href="#" id="nextLink">翌日 →</a>
   </div>
-  <div class="date-title" id="dateTitle">Loading...</div>
-  <div class="section-title">午前</div>
-  <div class="grid" id="amRow1"></div>
-  <div class="grid" id="amRow2"></div>
-  <div class="section-title">午後</div>
-  <div class="grid" id="pmRow1"></div>
-  <div class="grid" id="pmRow2"></div>
 
-  <!-- SVG filter -->
-  <svg width="0" height="0">
-    <defs>
-      <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
-        <feDropShadow dx="0" dy="0" stdDeviation="2" flood-color="orange"/>
-      </filter>
-    </defs>
-  </svg>
+  <div class="timeline-section">
+    <div class="timeline-title">午前</div>
+    <div class="timeline" id="amTimeline"></div>
+    <div class="timeline" id="amTimeline2"></div>
+  </div>
+
+  <div class="timeline-section">
+    <div class="timeline-title">午後</div>
+    <div class="timeline" id="pmTimeline"></div>
+    <div class="timeline" id="pmTimeline2"></div>
+  </div>
 
   <script>
-    const sheetURL = "https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec";
+    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // 差し替え必要
 
-    function padZero(n) {
-      return n.toString().padStart(2, '0');
-    }
+    // 日付の取得
+    const urlParams = new URLSearchParams(window.location.search);
+    const dateParam = urlParams.get('date');
+    const today = new Date();
+    const currentDate = dateParam ? new Date(dateParam) : today;
 
-    function getColorForSpeed(speed) {
-      if (speed < 1) return "#99ccff";
-      if (speed < 3) return "#66ccff";
-      if (speed < 5) return "#00cccc";
-      if (speed < 8) return "#ff9933";
-      return "#ff3333";
-    }
+    const yyyy = currentDate.getFullYear();
+    const mm = String(currentDate.getMonth() + 1).padStart(2, '0');
+    const dd = String(currentDate.getDate()).padStart(2, '0');
+    const formattedDate = `${yyyy}/${mm}/${dd}`;
+    const displayDate = `${yyyy}年${mm}月${dd}日`;
 
-    function highlightDirection(deg) {
-      return deg >= 22.5 && deg <= 67.5; // NNE〜ENE
-    }
+    document.getElementById('dateTitle').textContent = displayDate;
 
+    // 前日・翌日リンク
+    const prevDate = new Date(currentDate);
+    prevDate.setDate(currentDate.getDate() - 1);
+    const nextDate = new Date(currentDate);
+    nextDate.setDate(currentDate.getDate() + 1);
+
+    const formatForURL = d =>
+      `${d.getFullYear()}-${String(d.getMonth() + 1).padStart(2, '0')}-${String(d.getDate()).padStart(2, '0')}`;
+
+    document.getElementById('prevLink').href = `?date=${formatForURL(prevDate)}`;
+    document.getElementById('nextLink').href = `?date=${formatForURL(nextDate)}`;
+
+    // SVG 矢印
     function createArrowSVG(deg, speed, highlight) {
-      const NS = "http://www.w3.org/2000/svg";
-      const svg = document.createElementNS(NS, "svg");
-      svg.setAttribute("width", "40");
-      svg.setAttribute("height", "40");
-      svg.setAttribute("viewBox", "0 0 40 40");
+      const svgNS = 'http://www.w3.org/2000/svg';
+      const svg = document.createElementNS(svgNS, 'svg');
+      svg.setAttribute('width', '40');
+      svg.setAttribute('height', '40');
+      svg.setAttribute('viewBox', '0 0 40 40');
 
-      const g = document.createElementNS(NS, "g");
-      g.setAttribute("transform", `rotate(${(deg + 180) % 360}, 20, 20)`);
+      const g = document.createElementNS(svgNS, 'g');
+      g.setAttribute('transform', `rotate(${(deg + 180) % 360}, 20, 20)`); // 風下方向
 
-      const color = getColorForSpeed(speed);
-
-      const shaft = document.createElementNS(NS, "line");
-      shaft.setAttribute("x1", "20");
-      shaft.setAttribute("y1", "25");
-      shaft.setAttribute("x2", "20");
-      shaft.setAttribute("y2", "15");
-      shaft.setAttribute("stroke", color);
-      shaft.setAttribute("stroke-width", "2");
-
-      const head = document.createElementNS(NS, "polygon");
-      head.setAttribute("points", "15,15 25,15 20,5");
-      head.setAttribute("fill", highlight ? "red" : color);
-      if (highlight) head.setAttribute("filter", "url(#glow)");
-
+      const shaft = document.createElementNS(svgNS, 'line');
+      shaft.setAttribute('x1', '20');
+      shaft.setAttribute('y1', '25');
+      shaft.setAttribute('x2', '20');
+      shaft.setAttribute('y2', '15');
+      shaft.setAttribute('stroke', getColorBySpeed(speed));
+      shaft.setAttribute('stroke-width', '3');
+      shaft.setAttribute('stroke-linecap', 'round');
       g.appendChild(shaft);
+
+      const head = document.createElementNS(svgNS, 'polygon');
+      head.setAttribute('points', '16,15 24,15 20,5');
+      head.setAttribute('fill', highlight ? 'red' : getColorBySpeed(speed));
       g.appendChild(head);
+
+      if (highlight) {
+        g.setAttribute('filter', 'drop-shadow(0 0 5px orange)');
+      }
+
       svg.appendChild(g);
       return svg;
     }
 
-    function getDateParam(offset = 0) {
-      const url = new URL(location.href);
-      const base = url.searchParams.get("date")
-        ? new Date(url.searchParams.get("date"))
-        : new Date();
-      base.setDate(base.getDate() + offset);
-      return `${base.getFullYear()}-${padZero(base.getMonth() + 1)}-${padZero(base.getDate())}`;
+    function getColorBySpeed(speed) {
+      if (speed < 2) return '#00f';       // 弱風
+      if (speed < 4) return '#0cf';
+      if (speed < 6) return '#0f0';
+      if (speed < 8) return '#fc0';
+      return '#f00';                      // 強風
     }
 
-    async function loadData() {
-      const today = getDateParam();
-      document.getElementById("dateTitle").textContent = `${today} の風向・風速`;
-      document.getElementById("prevDay").href = `?date=${getDateParam(-1)}`;
-      document.getElementById("nextDay").href = `?date=${getDateParam(1)}`;
+    function isHighlightedDir(deg) {
+      return (deg >= 22.5 && deg <= 67.5); // NNE〜ENE
+    }
 
-      const res = await fetch(sheetURL);
-      const raw = await res.json();
+    fetch(apiUrl)
+      .then(res => res.json())
+      .then(data => {
+        const am1 = document.getElementById('amTimeline');
+        const am2 = document.getElementById('amTimeline2');
+        const pm1 = document.getElementById('pmTimeline');
+        const pm2 = document.getElementById('pmTimeline2');
 
-      const todayData = raw.filter(entry => {
-        const d = new Date(entry.timestamp);
-        return d.toISOString().slice(0, 10) === today;
-      });
+        const filtered = data.filter(entry =>
+          entry.timestamp.startsWith(formattedDate)
+        );
 
-      const am = todayData.filter(e => new Date(e.timestamp).getHours() < 12);
-      const pm = todayData.filter(e => new Date(e.timestamp).getHours() >= 12);
+        filtered.forEach((entry, index) => {
+          const dt = new Date(entry.timestamp);
+          const hour = dt.getHours();
+          const minute = dt.getMinutes();
+          const timeStr = `${String(hour).padStart(2, '0')}:${String(minute).padStart(2, '0')}`;
 
-      function renderBlocks(data, row1, row2) {
-        [row1, row2].forEach(r => r.innerHTML = '');
-        data.forEach((e, i) => {
-          const hour = new Date(e.timestamp).getHours();
-          const min = new Date(e.timestamp).getMinutes();
-          const timeStr = `${padZero(hour)}:${padZero(min)}`;
+          const container = document.createElement('div');
+          container.className = 'entry';
 
-          const div = document.createElement("div");
-          div.className = "entry";
+          const timeEl = document.createElement('div');
+          timeEl.textContent = timeStr;
 
-          const time = document.createElement("div");
-          time.textContent = timeStr;
+          const arrow = createArrowSVG(entry.windDeg ?? 0, entry.windSpeed ?? 0, isHighlightedDir(entry.windDeg ?? 0));
 
-          const svg = createArrowSVG(Number(e.windDeg), Number(e.windSpeed), highlightDirection(Number(e.windDeg)));
+          const icon = document.createElement('img');
+          icon.className = 'icon';
+          icon.src = `https://openweathermap.org/img/wn/${entry.icon}@2x.png`;
+          icon.alt = entry.description ?? '';
 
-          const icon = document.createElement("img");
-          icon.className = "icon";
-          icon.src = `https://openweathermap.org/img/wn/${e.icon}@2x.png`;
-          icon.alt = e.description;
+          container.appendChild(timeEl);
+          container.appendChild(arrow);
+          container.appendChild(icon);
 
-          div.appendChild(time);
-          div.appendChild(svg);
-          div.appendChild(icon);
-
-          if (i < 12) row1.appendChild(div);
-          else row2.appendChild(div);
+          // 分割配置（1段12個）
+          if (hour < 12) {
+            (index < 12 ? am1 : am2).appendChild(container);
+          } else {
+            (index < 36 ? pm1 : pm2).appendChild(container);
+          }
         });
-      }
-
-      renderBlocks(am, document.getElementById("amRow1"), document.getElementById("amRow2"));
-      renderBlocks(pm, document.getElementById("pmRow1"), document.getElementById("pmRow2"));
-    }
-
-    loadData();
+      })
+      .catch(err => {
+        console.error('データ取得エラー:', err);
+      });
   </script>
 </body>
 </html>
